--- a/Estimated/Views/EstimationHistoryCell.xib
+++ b/Estimated/Views/EstimationHistoryCell.xib
@@ -12,75 +12,81 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="150" id="KGk-i7-Jjw" customClass="EstimationHistoryCell" customModule="Estimated" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="582" height="169"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="EstimationHistoryCell" rowHeight="150" id="KGk-i7-Jjw" customClass="EstimationHistoryCell" customModule="Estimated" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="576" height="123"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="582" height="168.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="576" height="122.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="0j5-i5-dcb">
-                        <rect key="frame" x="20" y="52" width="542" height="65"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Vdl-Nw-WJB">
+                        <rect key="frame" x="20" y="12" width="536" height="98.5"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="nBU-SO-cU0">
-                                <rect key="frame" x="0.0" y="0.0" width="263" height="65"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="paZ-0I-wvP">
+                                <rect key="frame" x="0.0" y="21.5" width="258" height="56"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Writing report" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bBW-xP-e4R" userLabel="taskNameLabel">
-                                        <rect key="frame" x="0.0" y="0.0" width="263" height="40.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Writing report" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bBW-xP-e4R" userLabel="taskNameLabel">
+                                        <rect key="frame" x="0.0" y="0.0" width="127" height="24"/>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="27 / 07 / 2019" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yuO-hb-eGF" userLabel="dateLabel">
-                                        <rect key="frame" x="0.0" y="44.5" width="263" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                            </stackView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="GoK-Uh-f2t">
-                                <rect key="frame" x="279" y="0.0" width="263" height="65"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You're late" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0pg-CO-jTy" userLabel="accuracyStatus">
-                                        <rect key="frame" x="0.0" y="0.0" width="263" height="20.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="15 mins late" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0pg-CO-jTy" userLabel="accuracyStatus">
+                                        <rect key="frame" x="0.0" y="32" width="91" height="24"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="45 mins" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hgI-aR-6AU" userLabel="differenceLabel">
-                                        <rect key="frame" x="0.0" y="20.5" width="263" height="24"/>
-                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
-                                        <nil key="textColor"/>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="bottom" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="hyl-Qe-mBi">
+                                <rect key="frame" x="278" y="7.5" width="258" height="84"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="27 / 07 / 2019" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yuO-hb-eGF" userLabel="dateLabel">
+                                        <rect key="frame" x="153" y="0.0" width="105" height="40"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="45%" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="52Z-86-m5V" userLabel="accuracyPercent">
-                                        <rect key="frame" x="0.0" y="44.5" width="263" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zem-yM-rpy">
+                                        <rect key="frame" x="178" y="44" width="80" height="40"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100%" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="52Z-86-m5V" userLabel="accuracyPercent">
+                                                <rect key="frame" x="18.5" y="9.5" width="43.5" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstItem="52Z-86-m5V" firstAttribute="centerY" secondItem="zem-yM-rpy" secondAttribute="centerY" id="6wa-Qc-Yda"/>
+                                            <constraint firstAttribute="height" constant="40" id="DIM-OW-oju"/>
+                                            <constraint firstAttribute="width" constant="80" id="MWv-G4-uoD"/>
+                                            <constraint firstItem="52Z-86-m5V" firstAttribute="centerX" secondItem="zem-yM-rpy" secondAttribute="centerX" id="Rpi-F7-kul"/>
+                                        </constraints>
+                                    </view>
                                 </subviews>
                             </stackView>
                         </subviews>
                     </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="0j5-i5-dcb" secondAttribute="trailing" constant="20" id="AvC-DC-MK2"/>
-                    <constraint firstItem="0j5-i5-dcb" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="C9f-kl-435"/>
-                    <constraint firstItem="0j5-i5-dcb" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="Rql-y0-i6q"/>
-                    <constraint firstItem="0j5-i5-dcb" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="vQM-zU-tO6"/>
+                    <constraint firstItem="Vdl-Nw-WJB" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="FeX-wG-2oJ"/>
+                    <constraint firstItem="Vdl-Nw-WJB" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="bBg-oD-sid"/>
+                    <constraint firstAttribute="trailing" secondItem="Vdl-Nw-WJB" secondAttribute="trailing" constant="20" id="nQI-G4-2z4"/>
+                    <constraint firstAttribute="bottom" secondItem="Vdl-Nw-WJB" secondAttribute="bottom" constant="12" id="pCJ-Pt-qge"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="accuracyPercentLabel" destination="52Z-86-m5V" id="9OJ-Rb-f8J"/>
-                <outlet property="accuracyStatusLabel" destination="0pg-CO-jTy" id="he9-pf-pKA"/>
-                <outlet property="dateLabel" destination="yuO-hb-eGF" id="ze8-ov-X30"/>
-                <outlet property="differenceLabel" destination="hgI-aR-6AU" id="jdr-ke-mVg"/>
-                <outlet property="taskNameLabel" destination="bBW-xP-e4R" id="6li-YO-Gx5"/>
+                <outlet property="accuracyBackgroundView" destination="zem-yM-rpy" id="Wlc-VP-b2B"/>
+                <outlet property="accuracyPercentLabel" destination="52Z-86-m5V" id="cN4-Bn-sa5"/>
+                <outlet property="accuracyStatusLabel" destination="0pg-CO-jTy" id="nL4-4L-R8d"/>
+                <outlet property="dateLabel" destination="yuO-hb-eGF" id="1pA-Uu-3S2"/>
+                <outlet property="taskNameLabel" destination="bBW-xP-e4R" id="nea-lv-zjv"/>
             </connections>
-            <point key="canvasLocation" x="372.46376811594206" y="138.95089285714286"/>
+            <point key="canvasLocation" x="-88" y="79"/>
         </tableViewCell>
     </objects>
 </document>
