--- a/Estimated/HistoryViewController/EstimationHistoryCell.xib
+++ b/Estimated/HistoryViewController/EstimationHistoryCell.xib
@@ -19,63 +19,52 @@
                 <rect key="frame" x="0.0" y="0.0" width="576" height="122.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Vdl-Nw-WJB">
-                        <rect key="frame" x="20" y="12" width="536" height="98.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Writing report" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bBW-xP-e4R" userLabel="taskNameLabel">
+                        <rect key="frame" x="20" y="12" width="127" height="24"/>
+                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="15 mins late" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0pg-CO-jTy" userLabel="accuracyStatus">
+                        <rect key="frame" x="20" y="90" width="91" height="20.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="27 / 07 / 2019" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yuO-hb-eGF" userLabel="dateLabel">
+                        <rect key="frame" x="451" y="12" width="105" height="20.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zem-yM-rpy">
+                        <rect key="frame" x="456" y="70.5" width="100" height="40"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="paZ-0I-wvP">
-                                <rect key="frame" x="0.0" y="21.5" width="264" height="56"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Writing report" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bBW-xP-e4R" userLabel="taskNameLabel">
-                                        <rect key="frame" x="0.0" y="0.0" width="127" height="24"/>
-                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="15 mins late" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0pg-CO-jTy" userLabel="accuracyStatus">
-                                        <rect key="frame" x="0.0" y="32" width="91" height="24"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                            </stackView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="bottom" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="hyl-Qe-mBi">
-                                <rect key="frame" x="272" y="7.5" width="264" height="84"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="27 / 07 / 2019" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yuO-hb-eGF" userLabel="dateLabel">
-                                        <rect key="frame" x="159" y="0.0" width="105" height="40"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zem-yM-rpy">
-                                        <rect key="frame" x="184" y="44" width="80" height="40"/>
-                                        <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100%" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="52Z-86-m5V" userLabel="accuracyPercent">
-                                                <rect key="frame" x="18.5" y="9.5" width="43.5" height="20.5"/>
-                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
-                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                        </subviews>
-                                        <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <constraints>
-                                            <constraint firstItem="52Z-86-m5V" firstAttribute="centerY" secondItem="zem-yM-rpy" secondAttribute="centerY" id="6wa-Qc-Yda"/>
-                                            <constraint firstAttribute="height" constant="40" id="DIM-OW-oju"/>
-                                            <constraint firstAttribute="width" constant="80" id="MWv-G4-uoD"/>
-                                            <constraint firstItem="52Z-86-m5V" firstAttribute="centerX" secondItem="zem-yM-rpy" secondAttribute="centerX" id="Rpi-F7-kul"/>
-                                        </constraints>
-                                    </view>
-                                </subviews>
-                            </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100%" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="52Z-86-m5V" userLabel="accuracyPercentLabel">
+                                <rect key="frame" x="28.5" y="10" width="43.5" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
-                    </stackView>
+                        <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="52Z-86-m5V" firstAttribute="centerY" secondItem="zem-yM-rpy" secondAttribute="centerY" id="Fhm-Bw-Pn8"/>
+                            <constraint firstItem="52Z-86-m5V" firstAttribute="centerX" secondItem="zem-yM-rpy" secondAttribute="centerX" id="Fwm-Sa-SRZ"/>
+                            <constraint firstAttribute="width" constant="100" id="HzJ-FM-ymm"/>
+                            <constraint firstAttribute="height" constant="40" id="tHT-Rn-av3"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="Vdl-Nw-WJB" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="FeX-wG-2oJ"/>
-                    <constraint firstItem="Vdl-Nw-WJB" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="bBg-oD-sid"/>
-                    <constraint firstAttribute="trailing" secondItem="Vdl-Nw-WJB" secondAttribute="trailing" constant="20" id="nQI-G4-2z4"/>
-                    <constraint firstAttribute="bottom" secondItem="Vdl-Nw-WJB" secondAttribute="bottom" constant="12" id="pCJ-Pt-qge"/>
+                    <constraint firstItem="yuO-hb-eGF" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="6Bd-29-qi8"/>
+                    <constraint firstItem="bBW-xP-e4R" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="7YE-bI-VL6"/>
+                    <constraint firstItem="0pg-CO-jTy" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="ACw-ie-r7Y"/>
+                    <constraint firstAttribute="bottom" secondItem="zem-yM-rpy" secondAttribute="bottom" constant="12" id="NZN-Ot-Lbv"/>
+                    <constraint firstAttribute="bottom" secondItem="0pg-CO-jTy" secondAttribute="bottom" constant="12" id="Ver-zo-LHP"/>
+                    <constraint firstAttribute="trailing" secondItem="zem-yM-rpy" secondAttribute="trailing" constant="20" id="flD-8R-j9m"/>
+                    <constraint firstAttribute="trailing" secondItem="yuO-hb-eGF" secondAttribute="trailing" constant="20" id="kgW-7Q-L66"/>
+                    <constraint firstItem="bBW-xP-e4R" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="tcU-Ua-fG4"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -86,7 +75,7 @@
                 <outlet property="taskDateLabel" destination="yuO-hb-eGF" id="Kqe-e3-j4E"/>
                 <outlet property="taskNameLabel" destination="bBW-xP-e4R" id="O1O-rb-odD"/>
             </connections>
-            <point key="canvasLocation" x="-88" y="79"/>
+            <point key="canvasLocation" x="-88.405797101449281" y="78.683035714285708"/>
         </tableViewCell>
     </objects>
 </document>
